--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,6 @@
     <script type="text/javascript" src="https://unpkg.com/vue-router@3.1.3/dist/vue-router.js"></script>
     <script type="text/javascript" src="https://unpkg.com/axios@0.19.0/dist/axios.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/element-ui@2.13.0/lib/index.js"></script>
-    <script type="text/javascript" src="https://unpkg.com/rough-viz@1.0.2"></script>
+    <script type="text/javascript" src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts-en.common.min.js"></script>
   </body>
 </html>
